# edgetech-telemetry-pinephone

./: .env  CONTRIBUTING.md  Dockerfile  README.md  TelemetryPinephone.py  docker-compose.yml  example.env  telemetry.py
.github/workflows/: dockerbuild.yml  releasetag.yml
sensor-data/: telemetry_data.json
telemetry/: Dockerfile  pyproject.toml  telemetry_pub_sub.py
telemetry-pinephone/: Dockerfile  TelemetryPinephone.py
utils/: telemetry.py
