[tool.poetry]
name = "telemetry"
version = "0.1.0"
description = "MQTT client to pull basic telemetry from the Pinephone running mobian and publish that to a topic"
authors = ["Ari <ari.chadda@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
