[tool.poetry]
name = "telemetry"
version = "0.1.0"
description = "MQTT client to pull basic telemetry from the Pinephone running mobian and publish that to a topic"
authors = ["Ari <achadda@iqt.org>", "Rob <rcaudill@iqt.org>", "Logan <lkunka@iqt.org>", "Mona <mgogia@iqt.org>", "Jon <jmeade@iqt.org>", "Mike <mchadwick@iqt.org>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
